--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -50,3 +50,14 @@ jobs:
           # path to a .bandit file that supplies command line arguments
           # ini_path: # optional, default is DEFAULT
 
+      - name: SARIF Courier
+        # You may pin to the exact commit or the version.
+        # uses: falc0nTech/SARIFCourier@856cf3aa13a2e424931598f322a56055bb8ee9c6
+        uses: falc0nTech/SARIFCourier@v1
+        with:
+          # Path to the SARIF file to process.
+          sarif_file: ./results.sarif # default is results.sarif
+          # Where to post the results: "pr" for Pull Request comment, "issue" for Issue comment. If not set, the action will auto-detect based on the GitHub context.
+          # post_target: # optional, default is 
+                
+
